--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="background_dark">#ffb8860b</color>
     <color name="background_light">#ffd2b48c</color>
     <color name="transparent">#00b8860b</color>
+    <color name="lightgray">#d3d3d3</color>
 </resources>
