Added Empatica service, connection starts from mainActivity when button is pressed, timeout for connection is set at 5 sek

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,9 +15,9 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Start"
+        android:text="Connect"
         android:id="@+id/button"
-        android:onClick="startBtnClick"
+        android:onClick="connectClick"
         android:layout_gravity="right|bottom" />
 
 
