--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,10 +2,10 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/start_horizontal_margin"
+    android:paddingRight="@dimen/start_horizontal_margin"
+    android:paddingTop="@dimen/start_vertical_margin"
+    android:paddingBottom="@dimen/start_vertical_margin"
     tools:context=".MainActivity">
     <ImageView
         android:background="@drawable/backgroundradial"
@@ -40,12 +40,14 @@
             android:id="@+id/textView"
             android:layout_alignParentStart="true"
             android:layout_marginTop="50dp"
-            android:layout_marginLeft="25dp" />
+            android:layout_marginLeft="25dp"
+            android:textColor="@color/abc_primary_text_material_dark" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/textView"
             android:layout_alignStart="@id/textView"
-            android:text="testar text"/>
+            android:text="Live a calmer life"
+            android:textColor="@color/abc_primary_text_material_dark" />
     </RelativeLayout>
 </FrameLayout>
