--- a/app/src/main/res/layout/fragment_main_tabbed_senses.xml
+++ b/app/src/main/res/layout/fragment_main_tabbed_senses.xml
@@ -16,4 +16,42 @@
         android:layout_gravity="left|top"
         android:layout_alignParentEnd="true"
         android:layout_alignParentStart="true" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/loggingSwitch"
+        android:layout_alignParentStart="true"
+        android:paddingBottom="50dp">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:tint="@color/danger"
+            android:id="@+id/vector_image_content"
+            android:background="@drawable/beaker_content"
+            android:layout_gravity="bottom"
+            android:layout_alignParentBottom="true"
+            android:layout_alignWithParentIfMissing="false"
+            android:layout_alignParentRight="false" />
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/hej"
+            android:background="@drawable/beaker_filter"
+            android:layout_gravity="bottom"
+            android:layout_alignParentBottom="false"
+            android:layout_alignWithParentIfMissing="false"
+            android:layout_alignParentRight="false"
+            android:layout_below="@+id/vector_image_content"
+            android:layout_marginTop="-40dp"/>
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/vector_image_container"
+            android:background="@drawable/beaker_container"
+            android:layout_gravity="bottom"
+            android:layout_alignParentBottom="true"
+            android:layout_alignWithParentIfMissing="false"
+            android:layout_alignParentRight="false" />
+    </RelativeLayout>
+
 </RelativeLayout>
