--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+>
     <color name="colorPrimary">#607D8B</color>
     <color name="colorPrimaryDark">#263238</color>
     <color name="colorAccent">#78909C</color>
@@ -7,4 +8,7 @@
     <color name="background_light">#ffd2b48c</color>
     <color name="transparent">#00b8860b</color>
     <color name="lightgray">#d3d3d3</color>
+    <color name="web_background">#4fa23a</color>
+    <color name="web_border">#42922d</color>
+    <color name="danger">#ff0000</color>
 </resources>
