--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,15 +12,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Connect"
-        android:id="@+id/button"
-        android:onClick="connectClick"
-        android:layout_gravity="right|bottom" />
-
-
 
     <ImageView
         android:background="@drawable/wristbandicon"
@@ -50,4 +41,13 @@
             android:text="Live a calmer life"
             android:textColor="@color/abc_primary_text_material_dark" />
     </RelativeLayout>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Continue"
+        android:id="@+id/button"
+        android:onClick="connectClick"
+        android:layout_gravity="center_horizontal|bottom"
+        android:layout_marginBottom="40dp"/>
 </FrameLayout>
