Använd setStressLevel istället för updateStressLevel

--- a/app/src/main/res/drawable/beaker_content.xml
+++ b/app/src/main/res/drawable/beaker_content.xml
@@ -5,6 +5,7 @@
     android:viewportHeight="387.14301">
 
     <group
+            android:name="content"
             android:translateY="-665.21916">
         <path
             android:fillColor="@color/web_border"
